# cloud-wallpaer

./: README.md
client/: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac
client/src/: .cw-store-item.c.swp  Makefile.am  Makefile.in  cloud-wallpaper.c  cloud-wallpaper.h  cw-picture-window.c  cw-picture-window.h  cw-store-item.c  cw-store-item.h  cw-store.c  cw-store.h  cw-thumbnails-window.c  cw-thumbnails-window.h  cw-window.c  cw-window.h  global.c  global.h  main.c
server/: .Gemfile.un~  Gemfile
server-nodejs/: .images.js.un~  .index.js.un~  .sql.js.un~  .urlquery.js.un~  index.js  requestHandlers.js  result.js  router.js  server.js  sql.js
server/app/controllers/: .images_controller.rb.un~  images_controller.rb
server/app/models/: .image.rb.un~  .kind.rb.un~  image.rb  kind.rb
server/app/views/images/: ._form.html.erb.un~  .evaluate.html.erb.un~  .index.html.erb.un~  .show.html.erb.un~  _form.html.erb  index.html.erb  show.html.erb
server/config/: .routes.rb.un~  database.yml  routes.rb
server/config/initializers/: secret_token.rb
server/db/: schema.rb
server/db/migrate/: .20130109124613_create_images.rb.un~  .20130110040549_rename_column.rb.un~  20130109124613_create_images.rb  20130110040549_rename_column.rb  20130112143233_create_kinds.rb  20130112152610_remove_classification_from_images.rb  20130112152705_add_kind_id_to_images.rb
server/lib/tasks/: .1.rake.un~  .main.rake.un~  addfile.rake  main.rake
server/test/fixtures/: images.yml
server/test/functional/: images_controller_test.rb
